// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect[Base] should render correctly  1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable c-lkqjcp soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper cd43w9 soui-select-compressed-wrapper c-7vjtar soui-select-multiple-result-wrapper c-7a22yf soui-select-multiple-compressed-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-8p7oko soui-treeSelect-wrapper-disabled c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 250px;"
    tabindex="-1"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px; margin-left: 24px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter more 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-a7xog2 soui-treeSelect-wrapper-inner-title c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="c-o6szqp soui-inner-title-wrapper"
      >
        <div
          class="c4kxj2s soui-inner-title-title cv1qspd soui-inner-title-top"
        >
          Please select content
        </div>
        <div
          class="c4irvcz soui-inner-title-place"
        >
          <div
            class="c4kxj2s soui-inner-title-title"
          >
            Please select content
          </div>
        </div>
        <div
          class="c-yu7nrf soui-inner-title-content"
        >
          <div
            class="ch6kcpg soui-treeSelect-result"
          >
            <div
              class="cst20xc soui-select-result-text-wrapper"
            >
              <div
                class="ccborcd soui-select-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about loader 1`] = `
<div
  class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable c-lkqjcp soui-treeSelect-multiple"
  data-soui-input-border="true"
  style="width: 300px;"
  tabindex="0"
>
  <div
    class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
  >
    <div
      class="ch6kcpg soui-treeSelect-result"
    >
      <div
        class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
      >
        <span
          class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
        >
          <span>
            Please select content
          </span>
        </span>
      </div>
    </div>
  </div>
  <span
    class="c-qlrywl soui-treeSelect-arrow-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
      />
    </svg>
  </span>
</div>
`;

exports[`TreeSelect[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable c-lkqjcp soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about size 1`] = `
<div
  style="width: 100%; display: flex; align-items: center; gap: 24px;"
>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-k2l5n9 soui-treeSelect-wrapper-small c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-k6n15t soui-treeSelect-wrapper-large c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="c-rcwgjo soui-treeSelect-wrapper c-un6lio soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-ccl0f5 soui-treeSelect-result-wrapper c-m6ehm2 soui-treeSelect-wrapper-padding-box cwmkarb soui-treeSelect-wrapper-inner-title-top c-b842ev soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="ch6kcpg soui-treeSelect-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-qlrywl soui-treeSelect-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
